
syntax = "proto3";

package ethereum.beacon.p2p.v1;

import "google/protobuf/timestamp.proto";

message BeaconState {
  // Validator registry [1-1000] 
  repeated ValidatorRecord validator_registry = 1;
  uint64 validator_registry_last_change_slot = 2;
  uint64 validator_registry_exit_count = 3;
  bytes validator_registry_delta_chain_tip_hash32 = 4; 

  // Randomness and committees [1001-2000]
  bytes randao_mix_hash32 = 1001;
  bytes next_seed_hash32 = 1002;
  repeated ShardAndCommitteeArray shard_and_committees_for_slots = 1003;
  // TODO: Persistent committees should be a 2d uint24 array.
  repeated uint32 persistent_committees = 1004 [deprecated=true];
  // repeated Uint32Array persistent_committees = 1004;
  repeated ShardReassignmentRecord persistent_committee_reassignments = 1005;

  // Finality [2001-3000] 
  uint64 previous_justified_slot = 2001;
  uint64 justified_slot = 2002;
  uint64 justified_slot_bitfield = 2003;
  uint64 finalized_slot = 2004;

  // Recent state [3001-4000]
  repeated CrosslinkRecord latest_crosslinks = 3001;
  uint64 last_state_recalculation_slot = 3002;
  repeated bytes latest_block_hash32s = 3003;
  repeated uint64 latest_penalized_exit_balances = 3004;
  repeated PendingAttestationRecord latest_attestations = 3005;

  // PoW receipt root [4001-5000]
  repeated bytes processed_pow_receipt_root_hash32 = 4001;
  repeated CandidatePoWReceiptRootRecord candidate_pow_receipt_roots = 4002;

  // Miscellanous [5001-6000]
  uint64 genesis_time = 5001;
  ForkData fork_data = 5002;



  // Deprecated fields 
  // All fields mustbe annotated with [deprecated=true];
  repeated ValidatorRecord validators = 10000 [deprecated=true]; // Deprecated by validator_registry 
  uint64 validator_set_change_slot = 10001  [deprecated=true]; // Deprecated by validator_registry_latest_change_slot
  repeated CrosslinkRecord crosslinks = 10002 [deprecated=true]; // Deprecated by latest_cross_links
  bytes randao_mix = 10003 [deprecated=true]; // Renamed to randao_mix_hash32
  repeated ShardReassignmentRecord persistent_committee_reassignment = 10004 [deprecated=true]; // Renamed to persistent_committee_resassigments (plural).
  uint64 last_finalized_slot = 10005 [deprecated=true]; // Replaced/renamed by finalized_slot
  uint64 last_justified_slot = 10006 [deprecated=true]; // Replaced/renamed by justified_slot
  uint64 justified_streak = 10007 [deprecated=true]; // Deprecated by changes in fork choice rule. See https://github.com/ethereum/eth2.0-specs/blob/master/specs/core/0_beacon-chain.md#beacon-chain-fork-choice-rule 
  bytes next_shuffling_seed = 10008 [deprecated=true]; // Replaced/renamed by next_seed_hash32 
  repeated uint64 deposits_penalized_in_period = 10009 [deprecated=true]; // Replaced by latest_penalized_exit_balances
  bytes validator_delta_hash_chain = 10010 [deprecated=true]; // Replaced by validator_registry_delta_chain_tip
  uint64 current_exit_seq = 10011 [deprecated=true]; // No longer needed?
  bytes known_pow_receipt_root = 10012 [deprecated=true]; // Deprecated by better handling of pow receipts
  bytes candidate_pow_receipt_root = 10013 [deprecated=true]; // Replaced by candidate_pow_receipt_roots.
  uint64 candidate_pow_receipt_root_votes = 10014 [deprecated=true]; // Replaced by candidate_pow_receipt_roots
  repeated AggregatedAttestation pending_attestations = 10018 [deprecated=true]; // Deleted by spec
  repeated bytes recent_block_hashes = 10019 [deprecated=true]; // Replaced/renamed by latest_block_hashes
}

message ForkData {
  uint64 pre_fork_version = 1;
  uint64 post_fork_version = 2;
  uint64 fork_slot = 3;
}

message CandidatePoWReceiptRootRecord {
  bytes candidate_pow_receipt_root_hash32 = 1;
  uint64 votes = 2;
}

message PendingAttestationRecord {
  AttestationData data = 1;
  bytes participation_bitfield = 2;
  bytes custody_bitfield = 3;
  uint64 slot_included = 4;
}

message AttestationData {
  uint64 slot = 1;
  uint64 shard = 2;
  bytes beacon_block_hash32 = 3;
  bytes epoch_boundary_hash32 = 4;
  bytes shard_block_hash32 = 5;
  bytes latest_crosslink_hash32 = 6;
  uint64 justified_slot = 7;
  bytes justified_block_hash32 = 8;
}

message ValidatorRecord {
  bytes pubkey = 1;
  uint64 withdrawal_shard = 2;
  bytes withdrawal_address = 3;
  bytes randao_commitment = 4;
  uint64 balance = 5;
  uint64 status = 6;
  uint64 exit_slot = 7;
  uint64 randao_last_change = 8;
}

message ShardReassignmentRecord {
  uint32 validator_index = 1;
  uint64 shard = 2;
  uint64 slot = 3;
}

message AggregatedAttestation {
  uint64 slot = 1;
  uint64 shard = 2;
  uint64 justified_slot = 3;
  bytes justified_block_hash = 4;
  bytes shard_block_hash = 5;
  bytes attester_bitfield = 6;
  repeated bytes oblique_parent_hashes = 7;
  repeated uint64 aggregate_sig = 8;
}

message SpecialRecord {
    uint32 kind = 1;
    repeated bytes data = 2;
}

message CrosslinkRecord {
  bytes shard_block_hash = 1;
  uint64 slot = 2;
}

message ShardAndCommitteeArray {
  repeated ShardAndCommittee array_shard_and_committee = 1;
}

message ShardAndCommittee {
  uint64 shard = 1;
  repeated uint32 committee = 2;
}

message BeaconBlock {
  repeated bytes ancestor_hashes = 1;
  uint64 slot = 2;
  bytes randao_reveal = 3;
  bytes pow_chain_ref = 4;
  bytes state_root = 5;
  google.protobuf.Timestamp timestamp = 6;
  repeated AggregatedAttestation attestations = 7;
  repeated SpecialRecord specials = 8;
}
